# CPP4_3D_Viewer_v.2.0

src/: CMakeLists.txt  Makefile
src/QtGifImage-master/: Makefile
src/QtGifImage-master/src/: Makefile
src/controller/: controller.cc  controller.h
src/model/: modeldata.cc  modeldata.h  observable.h  observer.h  parser.cc  parser.h  preparer.cc  preparer.h
src/tests/: tests.cc
src/view/: 3D_viewer_2_0.pro  mainwindow.cc  mainwindow.h  mainwindow.ui  resourses.qrc  viewwidget.cc  viewwidget.h
